# CS221Project

./: .#queryresults.txt  .gitignore  CS221Project-20.prof  CS221Project.cabal  CS221Project.prof  CourseGraph.hi  CourseGraph.hs  CourseInformation.java  Main.hi  Main.hs  Notes.md  ProgressReport.md  Proposal.md  README.md  ReadDB.hi  ReadDB.hs  TODO.org  TODO.org.orig  Util.hi  Util.hs  coursegraph.py  courseinfo-small.db  courseinfo-small.db.orig  courseinfo-small.txt  courseinfodata-small.db  courseinfodata.db-journal  coursepageparser.py  createDatabase.py  createDatabase.py.BACKUP.87993.py  createDatabase.py.BASE.43692.py  createDatabase.py.LOCAL.43692.py  createDatabase.py.REMOTE.43692.py  debug.txt  explorecoursesassessment.xlsx  finalreport.log.orig  finalreport.tex  main.py  nlpnotes.txt  partners.txt  posterideas.txt  (+12 more)
Data/: departmentcodes.txt  explorecoursesassessment.xlsx  instructordb_saved.db
Debug/: profiler.py
Testing/: Main.hs  main.py  testquery.py
Util/: util.py
Write Up Files/: ProgressReport.md  Proposal.md  TODO.org  finalreport.tex  queryresults.txt
Write Up Files/auto/: finalreport.el
auto/: finalreport.el
more/: coursegraph.py  queries.txt  readDB.py  writeup.tex
submission/more/: ReadDB.hs  main.py  queryresults.txt
