name: CS221Project
version: 1.0
author: Michael Dickens
build-type: Simple
cabal-version: >= 1.14

Flag Debug
     Description: Enable debug support
     Default: False

executable CS221Project
  main-is: Main.hs
  default-language: Haskell98
  hs-source-dirs: .
  build-depends: base >= 3
               , bytestring >= 0.9.2.1
               , bytestring-lexing >= 0.4.3
               , containers >= 0.4.0.0
               , HDBC >= 2.3.1.2
               , HDBC-sqlite3 >= 2.3.3.0
               , MissingH >= 1.0.0
               -- , Stemmer >= 0.5
               , vector >= 0.10.0.0
  if flag(debug)
     GHC-Options: -O2 -rtsopts -fprof-auto -caf-all
     CPP-Options: -DDEBUG 
  else
     GHC-Options: -O2 -rtsopts